# 1-2-find-video-source

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: search_video.py  semantic_search.py  transcriptions.py
src/data_models/: schemas.py
transcription_db/: UF8uR6Z6KLc.json
